tests/neg/i12537.scala
extension [T](x: T) def ext: T = x
def foo = String.ext  // error
